--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "v-shared-element": "^3.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
