--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.0.32",
     "v-shared-element": "^3.1.0",
     "vue": "^3.2.47",
