--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "nanoid": "^4.0.2",
     "pinia": "^2.0.32",
@@ -22,6 +23,7 @@
     "vue3-lazyload": "^0.3.6"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.93",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.15.11",
@@ -35,6 +37,7 @@
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "typescript": "~4.8.4",
+    "unplugin-icons": "^0.16.5",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
   }
