--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,13 +4,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*", "./src/components/*/index.vue"],
       "@/components/icons/*": ["./src/components/icons/*.vue"],
       "@/features/*/composables": ["./src/features/*/composables/"],
       "@/features/*": ["./src/features/*/index.vue"],
       "@/utils": ["./src/utils/index.ts"],
       "@/plugins/*": ["./src/plugins/*/index.ts"],
-      "@/*": ["./src/*"]
+      "@/pages": ["./src/pages/index.vue"]
     },
     "composite": true,
     "types": ["node"],
